# nalu

./: .gitignore  Cargo.toml  LICENSE  readme.md
res/: gecko.py  gecko.vcd  gecko_copy.py  gecko_interactive.py  nalu.py
src/: component.rs  logging.rs  main.rs  pyo3_bindings.rs  python.rs  resize.rs  state.rs  tui_layout.rs  vcd.rs  view.rs  widgets.rs
src/component/: browser.rs  finder.rs  tests.rs
src/python/: bitvector.rs  buffer.rs  signals.rs  tests.rs  utils.rs  vcd_header.rs  waveform.rs
src/state/: browser.rs  filter.rs  hierarchy_browser.rs  netlist_viewer.rs  signal_viewer.rs  tree.rs  utils.rs  waveform.rs  waveform_viewer.rs
src/state/waveform/: timescale.rs
src/tui_layout/: component.rs  container.rs  finder.rs  pos.rs  tests.rs
src/tui_layout/container/: list.rs  search.rs
src/widgets/: browser.rs  signal.rs  timescale.rs  waveform.rs
