[package]
name = "nalu"
version = "0.1.0"
edition = "2021"
description = "A fast command line tool for viewing and verifying VCD waveform files."

[dependencies]
crossbeam = "0.8.1"
bytes = "1.1.0"
log = "0.4.0"
simple_logger = "1.11.0"
humansize = "1.1.1"
alphanumeric-sort = "1.4.4"
crossterm = "0.23.1"
serde = {version = "1.0.130", features = ["derive"]}
clap = { version = "3.1.8", features = ["derive"] }
tui = "0.18.0"
indiscriminant = "0.2.0"
byte_storage = { path = "../byte_storage" }
crossbeam_helper = { path = "../crossbeam_helper" }
vcd_parser = { path = "../vcd_parser" }
