[package]
name = "nalu"
version = "0.1.0"
edition = "2021"
description = "A fast command line tool for viewing and verifying VCD waveform files."

[dependencies]
crossbeam = "0.8.1"
bytes = "1.1.0"
num-bigint = "0.4.3" # TODO: Replace with native BitVector-python conversion
log = "0.4.0"
simple_logger = "1.11.0"
humansize = "1.1.1"
alphanumeric-sort = "1.4.4"
crossterm = "0.25.0"
clap = { version = "3.1.8", features = ["derive"] }
tui = "0.19.0"
lazy_static = "1.4.0"
backtrace = "0.3.67"
indiscriminant = "0.2.0"
byte_storage = { path = "../byte_storage" }
crossbeam_helper = { path = "../crossbeam_helper" }
vcd_parser = { path = "../vcd_parser" }
waveform_db = { path = "../waveform_db" }
tui_layout = { path = "../tui_layout" }

[dependencies.pyo3]
version = "0.17.3"
features = ["auto-initialize", "num-bigint"]
