[package]
name = "nalu"
version = "0.1.0"
authors = ["David Gronlund"]
edition = "2021"
description = "TUI-based waveform viewer"
readme = "README.md"
repository = "https://github.com/dagronlund/nalu"
license = "MIT"
keywords = ["eda", "waveform", "vcd", "tui"]

[dependencies]
crossbeam = "0.8.1"
bytes = "1.1.0"
num-bigint = "0.4.3" # TODO: Replace with native BitVector-python conversion
log = "0.4.0"
simple-logging = "2.0.2"
humansize = "1.1.1"
alphanumeric-sort = "1.4.4"
crossterm = "0.25.0"
clap = { version = "3.1.8", features = ["derive"] }
tui = "0.19.0"
lazy_static = "1.4.0"
backtrace = "0.3.67"
indiscriminant = "0.2.0"
makai = {path = "../makai", version = "0.2.0"}
makai_waveform_db = {path = "../makai_waveform_db", version = "0.1.0"}
makai_vcd_reader = {path = "../makai_vcd_reader", version = "0.1.0"}
tui_tiling = {path = "../tui_tiling", version = "0.2.0"}

[dependencies.pyo3]
version = "0.17.3"
features = ["auto-initialize", "num-bigint"]

[dev-dependencies]
tempfile = "3.3.0"
